# c_algorithms_for_python

./: .exrc  .gitignore  README.md  c_theory.md  sand_box.c
cpython_template/: CMakeLists.txt  declarations.h  main.c  rename.c  setup.py  use_in_python.py
cpython_template/tests/: test_rename.c
datastructures/hash/: declarations.h  main.c
datastructures/hash/execs/: main  main.sh
datastructures/hash/functions/: add.c  delete_key.c  initialize_hash_table.c  my_strdup.c  search.c  simple_hash.c  traverse.c
datastructures/hash/tests/: test_add.c  test_delete_key.c  test_initialize_hash_table.c  test_my_strdup.c  test_search.c  test_simple_hash.c  test_traverse.c
datastructures/hash/tests/build_tests/: add.sh  delete_key.sh  initiate_hash_table.sh  my_strdup.sh  search.sh  simple_hash.sh  traverse.sh
datastructures/linkedList/: declarations.h  declarations.h.gch  linked_list  main.c
datastructures/linkedList/functions/: delete_at_beginning.c  delete_at_end.c  delete_at_position.c  free_list.c  get_all_numbers.c  get_length.c  insert_at_beginning.c  insert_at_end.c  insert_at_position.c  traverse.c
datastructures/linkedList/tests/: test_delete_at_beginning.c  test_delete_at_end.c  test_delete_at_position.c  test_free_list.c  test_get_all_numbers.c  test_get_length.c  test_insert_at_beginning.c  test_insert_at_end.c  test_insert_at_position.c  test_traverse.c
datastructures/linkedList/tests/tests_execs/: run_tests.sh
dynamic/fibonacci/: CMakeLists.txt  declarations.h  fibonacci.c  main.c  python_api.c  setup.py  test_fibonacci.py
dynamic/fibonacci/.cache/clangd/index/: declarations.h.FC68E48F101AA9E6.idx  fibonacci.c.FF066CFFFDFB5098.idx  main.c.55F9457183154AAD.idx  python_api.c.94D9C94E2E8BA044.idx
dynamic/longest_common_subsequence/: CMakeLists.txt  declarations.h  lcs.c  main.c  python_api.c  setup.py  use_in_python.py
dynamic/longest_common_subsequence/.cache/clangd/index/: declarations.h.A074660AC309316B.idx  lcs.c.C951EF8337795620.idx  main.c.C28DF4657968341F.idx  python_api.c.641EB6344423E651.idx
dynamic/longest_common_subsequence/tests/: test_lcs.c
execs/: sand_box
greedy/coin_change/: CMakeLists.txt  coin_change.c  declarations.h  main.c  merge_sort.c  python_api.c  setup.py  test_coin_change.py
greedy/coin_change/.cache/clangd/index/: coin_change.c.FA03C1402C259B13.idx  declarations.h.5614759DE1947072.idx  main.c.B2C236168CBBD4B2.idx  merge_sort.c.ECB67541E5890765.idx  python_api.c.78601BE309660E8C.idx
greedy/fractional_knapsack/: CMakeLists.txt  declarations.h  f_knapsack.c  main.c  python_api.c  setup.py
greedy/fractional_knapsack/.cache/clangd/index/: declarations.h.498061182D843739.idx  declarations.h.7DAC96A031D84246.idx  f_knapsack.c.62677D46B224BBAB.idx  f_knapsack.c.8C8D8F1E6113BF75.idx  main.c.048E87F0C5FA4B75.idx  main.c.BADE2D93AADE2801.idx  python_api.c.2F57604B192AF0EF.idx  python_api.c.5DFEF8D8B299967D.idx
greedy/fractional_knapsack/tests/: test_f_knapsack.c
search/binary_search/: binary_search.c  binary_search.h  test_binary_search.py
search/linear_search/: linear_search.c
sorting/: CMakeLists.txt  declarations.h  main.c  python_api.c  sand_box.c  setup.py  sorting_algorithms_table.md  undotree_2  use_in_python.py
sorting/.cache/clangd/index/: bubble.c.49ACE3BE561B61D4.idx  declarations.h.312D72EDFC6FF828.idx  factory.c.9615526F2D37F703.idx  insertion.c.1E97ED5E07C678BA.idx  main.c.4493390599D56BEA.idx  merge.c.78BC78547484177F.idx  python_api.c.24BE98986AEA5D1C.idx  quick.c.8575C9729D7B6816.idx  selection.c.634B1629707CA89C.idx
sorting/functions/: bubble.c  factory.c  insertion.c  merge.c  merge_inplace.c  quick.c  selection.c
sorting/tests/: test_bubble.c  test_factory.c  test_insertion.c  test_merge.c  test_merge_inplace.c  test_quick.c  test_selection.c
